--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.0",
     "react-youtube": "^10.0.0",
     "typescript": "^4.5.5",
